// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CatalogLayoutIcon > renders gallery icon correctly 1`] = `
<div>
  <svg
    data-testid="grip-horizontal-icon"
    role="img"
  >
    <path />
  </svg>
</div>
`;

exports[`CatalogLayoutIcon > renders list icon correctly 1`] = `
<div>
  <svg
    data-testid="bars-icon"
    role="img"
  >
    <path />
  </svg>
</div>
`;

exports[`CatalogLayoutIcon > renders unknown icon correctly 1`] = `
<div>
  <svg
    data-testid="unknown-icon"
    role="img"
  >
    <path />
  </svg>
</div>
`;
